# unity-jsb

./: .gitignore  Directory.Build.props  LICENSE  LICENSE.md  NOTE.md  README.md  README_cn.md  TODO  TODO.md  gulpfile-config.json  gulpfile.js  jsb-modules.json  package-lock.json  package.json  test.sqlite  tsconfig.json  webpack.config.js  xmldoc.bat
.github/workflows/: prebuilt_quickjs.yml  split_upm.yml
Assets/: Foo.cs  SValue.cs  Sample.cs  data.json  fib.js  req_test1.js  req_test2.js  test.js
Assets/Examples/: req_test1.js  test.js
Assets/Examples/Data/: awesome.proto  test.xlsx
Assets/Examples/Scenes/: BasicRun.unity  SampleScene.unity  websocket.unity
Assets/Examples/Source/: ArrayTest.cs  AsyncTaskTest.cs  BasicRun.cs  DefaultFileSystem.cs  DelegateTest.cs  DisposableObject.cs  ExampleScriptsHintAttribute.cs  ExampleToggleHintAttribute.cs  ExtensionTest.cs  (+10 more)
Assets/Source/: JSBridgeDLL.cs
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset
Resources/: plover.js.txt
Scripts/config/: data.json
Scripts/protogen/: pb.bundle.d.ts  pb.bundle.js
Scripts/src/: data.ts  dofile_test.ts  example_async.ts  example_bytes.ts  example_csharp_promise.ts  example_databinding.ts  example_delegate.ts  example_disposable.ts  example_editor_window.ts  example_fairygui.ts  example_helloworld.ts  example_hotfix.ts  example_hotload.ts  example_jsx.tsx  example_lodash.ts  example_main.ts  example_matterjs.ts  example_monobehaviour.ts  example_operator_overload.ts  example_pbjs_parse.ts  example_pbjs_static.ts  example_ref_out.ts  example_reflect.ts  example_reflectbind_helloworld.ts  example_scriptable_object.ts  example_string_cache.ts  example_timer.ts  example_unity.ts  example_valuetype.ts  example_worker.ts  example_xhr.ts  example_xlsx.ts  experimental_gtype.ts  game_demo.ts  my_scriptable_object.ts  req_test1.ts  test.ts  worker.ts
Source/: GCObject.cs  JSFunction.cs  JSNative.cs  JSWorker.cs  ScriptContext.cs  ScriptContext_funcs.cs  ScriptDelegate.cs  ScriptEngine.cs  ScriptFunction.cs  ScriptPromise.cs  ScriptRuntime+Module.cs  ScriptRuntime.cs  ScriptRuntimeArgs.cs  ScriptValue.cs
Source/Binding/: ClassDecl.cs  CommonFix.cs  DefaultBinder.cs  DynamicDelegateOp.cs  DynamicField.cs  DynamicMethod.cs  DynamicType.cs  TypeRegister.cs  Values.cs  Values_delegate.cs  Values_get.cs  Values_get_var.cs  Values_hotfix.cs  Values_inject.cs  Values_match.cs  Values_new.cs  Values_push_class.cs  Values_push_primitive.cs  Values_push_struct.cs  Values_replace.cs
Source/Buffer/: ByteBufferPooledAllocator.cs  ByteBufferThreadedPooledAllocator.cs  ByteBufferWriter.cs
Source/Module/: FuncModuleRegister.cs  IModuleRegister.cs  JsonModuleResolver.cs  PathBasedModuleResolver.cs  ProxyModuleRegister.cs  RawModuleRegister.cs  SourceModuleResolver.cs  StaticModuleResolver.cs  ValueModuleRegister.cs
Source/Native/: JSApi+Helpers.cs  JSApi+QuickJS.cs  JSApi+StructValue.cs  JSApi.cs  JSCFunctionEnum.cs  JSClassDef.cs  JSContext.cs  JSEvalFlags.cs  JSGPNFlags.cs  JSModuleDef.cs  JSPropFlags.cs  JSValue.cs  jsb.native.asmdef
Source/Shared/: JSPayloadHeader.cs  NativeAttributes.cs
Source/Unity/: EditorWindowFix.cs  GameObjectFix.cs  JSBehaviour.cs  JSEditorWindow.cs  JSScriptableObject.cs  ResourcesFix.cs  ScriptInstancedObject.cs  ScriptableObjectFix.cs
Source/Utils/: DefaultAsyncManager.cs  FSWatcher.cs  IAsyncManager.cs  IFileSystem.cs  IJsonConverter.cs  JSAction.cs  JSStringCache.cs  JSWeakMap.cs  ObjectCache.cs  ObjectCollection.cs  SafeRelease.cs  Scheduler.cs  ScriptLogger.cs  TSConfig.cs  TimerManager.cs  TypeDB.cs
Typings/: jsb.d.ts  plover.d.ts
jsb_build/: CMakeLists.txt  jsb_helpers.py  make_jsb.bat  make_jsb_osx.sh  make_jsb_win.bat  make_jsb_win.sh
jsb_build/cmake/: ios.toolchain.cmake
jsb_build/codegen/: StaticBindingSourceGenerator.cs  codegen.csproj
jsb_build/dotnetcore/: CustomBinding.cs  Program.cs  example.csproj  main.js
jsb_build/dotnetcore/Properties/: launchSettings.json
jsb_build/hotfix/: Program.cs  hotfix.csproj
jsb_build/httpserver/: .gitignore  package-lock.json  package.json  tsconfig.json
jsb_build/httpserver/render/: test.pug
jsb_build/httpserver/src/: index.js
jsb_build/jsb/: CMakeLists.txt  Makefile  VERSION  jsb.c  jsb.h  jsb_version.h  quickjs.c  quickjs.h
jsb_build/polyfills/sys/: time.h  times.c  times.h
jsb_build/prebuilt/Plugins/libquickjs.bundle/Contents/MacOS/: libquickjs
jsb_build/quickjs/: CMakeLists.txt  copy_to_assets.sh  demo.c  make_jsb_android.bat  make_jsb_android.sh  make_jsb_ios.sh  make_jsb_linux.sh  make_jsb_macos.sh  make_jsb_win.sh  make_jsb_wsa.bat  make_jsb_wsa.sh  unity_ext.c  unity_qjs.c
jsb_build/quickjs-2020-04-12/: Makefile  build_copy.sh  build_demo.sh  quickjs-libc.c  quickjs.c  unity_base.c
jsb_build/quickjs-2020-04-12/examples/: demo.c  demo.js
jsb_build/quickjs/quickjs-2020-04-12/: Makefile  quickjs.c  quickjs.h
jsb_build/quickjs/quickjs-2020-04-12/examples/: demo.c  demo.js
jsb_build/quickjs/quickjs-2020-07-05/: quickjs.c
jsb_build/quickjs/quickjs-latest/: quickjs.c  quickjs.h
jsb_build/quickjs/quickjs-wsa/: cutils.c  cutils.h  quickjs.c  quickjs.h
jsb_build/scratch/: main.c
jsb_build/sqlite3/: CMakeLists.txt  make_sqlite3_windows.bat  test_demo_vfs.c  unity_sqlite.c
jsb_build/v8-bridge/include/: JSApi.h  JSContext.h  JSInspectorClient.h  JSRuntime.h  QuickJSCompatible.h  WSServer.h  quickjs-atom.h
jsb_build/v8-bridge/src/: JSApi.cpp  JSContext.cpp  JSInspectorClient.cpp  JSRuntime.cpp  WSServer.cpp  cutils.c  libregexp.c  unity_ext.c
jsb_build/v8impl/: JSApi.cpp  JSApi.h  JSContext.cpp  JSContext.h  JSRuntime.cpp  JSRuntime.h  QuickJSCompatible.h  quickjs-atom.h  v8impl.h
jsb_build/websockets/: CMakeLists.txt  make_android.bat  make_lws_macos.sh  make_lws_windows.bat  make_windows.bat  unity_ws.c  unity_ws.h
jsb_build/websockets/libwebsockets/: lws_config_private.h
jsb_build/websockets/libwebsockets/core/: context.c
jsb_build/websockets/libwebsockets/misc/: getifaddrs.h
jsb_build/websockets/test_server/src/: main.go
(+611 files in other folders)
